# loaddsp

./: CMakeLists.txt  README.md
include/: dspmodule.h
src/: main.c
testmodules/: 0.c  1.c  2.c  3.c  4.c  5.c  6.c
